import java.text.SimpleDateFormat

plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.15.0'
    id 'org.jetbrains.changelog' version '1.3.1'
    id "org.sonarqube" version "3.4.0.2513"
    id 'jacoco'
}

group 'moe.knox.factorio'
version '1.4.0-IDEA231-eap-2'

sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
    maven {
        url = uri("https://jitpack.io")
    }
}

dependencies {
    implementation 'org.jsoup:jsoup:1.15.3'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
    testRuntimeOnly("org.junit.platform:junit-platform-launcher") {
        because("Only needed to run tests in a version of IntelliJ IDEA that bundles older versions")
    }
    implementation 'com.github.Marcono1234:gson-record-type-adapter-factory:v0.2.0'
}

ext.getPluginChangelog = { ->
    StringBuilder changelogHtml = new StringBuilder()

    for (item in changelog.getAll().values()) {
        if (item.isUnreleased) {
            continue
        }

        changelogHtml.append("<h3>" + item.version + "</h3>\n")
        changelogHtml.append("<ul>")

        for (section in item.getSections()) {
            String changesType = section.getKey()

            for ( sectionItem in section.getValue() ) {
                changelogHtml.append("<li>[" + changesType + "] " + sectionItem.substring(2) + "</li>\n")
            }
        }

        changelogHtml.append("</ul>\n")
    }

    return changelogHtml.toString()
}

sonarqube {}

changelog {
    path = "${project.projectDir}/Changelog.md"
    header = "[${-> version.get()}] - ${new SimpleDateFormat("dd.MM.yyyy").format(new Date())}"
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = "2023.1"
    plugins = [
        // See https://plugins.jetbrains.com/plugin/9768-emmylua/versions
        "com.tang:1.4.7-IDEA231"
    ]
}

runPluginVerifier {}

patchPluginXml {
    changeNotes = getPluginChangelog()
    sinceBuild = "231"
    untilBuild = "232.*"
    version = project.version
}

test {
    useJUnitPlatform()

    reports {
        junitXml.outputLocation = layout.buildDirectory.dir('reports/junit/xml')
        html.outputLocation = layout.buildDirectory.dir('reports/junit/html')
    }

    finalizedBy jacocoTestReport

    systemProperty("junit.jupiter.execution.parallel.enabled", true)
    systemProperty("junit.jupiter.execution.parallel.mode.default", "concurrent")
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        xml.outputLocation = layout.buildDirectory.file('reports/jacoco/report.xml')
        html.required = true
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco/html')
    }
}
